apply dist/ css / js on view pages from webpack

--- a/view/footer_finish.html
+++ b/view/footer_finish.html
@@ -1,4 +1,3 @@
-		<script src="resource/functions.js" defer></script>
-		<script src="resource/js/view/general.js" defer></script>
+		<script src="resource/dist/js/main.js" defer></script>
 	</body>
 </html>
