update js file directory

--- a/view/footer.html
+++ b/view/footer.html
@@ -83,4 +83,4 @@
 				<p>Copyright &copy; 2017 TriSoap All Rights Reserved</p>
 			</div>
 		</footer>
-		<script src="resource/js/jquery-3.2.1.min.js"></script>
+		<script src="resource/dist/js/jquery-3.2.1.min.js"></script>
