--- a/view/head.html
+++ b/view/head.html
@@ -7,7 +7,7 @@
 		<title>{title}｜三三吾鄉手工皂 Trisoap</title>
 		<meta name="author" content="2017 Trisoap Team">
 		<meta name="description" content="{description}">
-		<meta property="og:title" content="三三吾鄉手工皂 Trisoap" >
+		<meta property="og:title" content="{title}｜三三吾鄉手工皂 Trisoap" >
 		<meta property="og:url" content="https://www.trisoap.com.tw">
 		<meta property="og:image" content="https://www.trisoap.com.tw/resource/img/index/index01.jpg">
 		<meta property="og:description" content="{description}" >
