--- a/view/footer_finish.html
+++ b/view/footer_finish.html
@@ -1,3 +1,3 @@
-		<script src="resource/dist/js/main.js" defer></script>
+		<script src="resource/dist/js/view/official.js" defer></script>
 	</body>
 </html>
