update css related directories

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -13,7 +13,7 @@
  * =========================================================================
  */
 
-@import url(../normalize.css);
+@import url(normalize.css);
 
 h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 	font-family: sans-serif;
