--- a/resource/css/user_function.scss
+++ b/resource/css/user_function.scss
@@ -33,4 +33,16 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 $bg-orange: #F18C41;
 $main-font-color: #555;
 
+/* -------------------------------------------------------------------------
+ * 0. Shared Properties
+ * -------------------------------------------------------------------------
+ */
+
+@import 'general';
+
+/* =========================================================================
+ * Member
+ * =========================================================================
+ */
+
 
