normalize <link> tag - 'rel' first

--- a/view/head.html
+++ b/view/head.html
@@ -12,4 +12,4 @@
 		<meta property="og:image" content="https://www.trisoap.com.tw/resource/img/index/index01.jpg">
 		<meta property="og:description" content="{description}" >
 		<link rel="shortcut icon" href="resource/img/misc/favicon.png">
-		<link href="resource/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="resource/font-awesome-4.7.0/css/font-awesome.min.css">
