--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -1,4 +1,4 @@
-		<link href="resource/dist/css/trisoap.css" rel="stylesheet">
+		<link rel="stylesheet" href="resource/dist/css/trisoap.css">
 	</head>
 	<body class="no-scroll">
 		<!-- <div id="preloader">
