fix input tag type

--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -16,7 +16,7 @@
 					<div id="single-product-purchase">
 						<h2 id="single-product-price">{price}</h2>
 						<label for="purchase-amount">數量：</label>
-						<input id="purchase-amount" class="form-field" type="number" name="ORDAMT" value="1" min="1">
+						<input type="number" id="purchase-amount" class="form-field" name="ORDAMT" value="1" min="1">
 						<a class="submit-btn" href="#">加入購物車</a>
 					</div>
 				</div>
