finish user_function/ signin and signup page

--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -19,12 +19,12 @@
                 <div class="sign-block">
                     <label for="account">電子信箱</label>
                     <br>
-                    <input id="account" type="text">
+                    <input type="email" id="account">
                 </div>
                 <div class="sign-block">
                     <label for="password">密碼</label>
                     <br>
-                    <input id="password" type="password">
+                    <input type="password" id="password">
                 </div>
                 <div class="sign-block">
                     <a class="promise-btn" href="javascript:void(0)" onclick="memberSignin()">登入</a>
