--- a/resource/css/user_function.scss
+++ b/resource/css/user_function.scss
@@ -42,8 +42,8 @@ $main-font-color: #555;
 
 .sign-wrap {
 	display: flex;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	min-height: 100vh;
 	justify-content: center;
 	align-items: center;
 	background: url(/resource/img/jumbotrons/single_product.jpg) center center no-repeat;
@@ -51,6 +51,7 @@ $main-font-color: #555;
 }
 
 .sign {
+	margin: 40px auto;
 	border-radius: 16px;
 	box-sizing: border-box;
 	background-color: rgba(255, 255, 255, 0.63);
@@ -58,13 +59,16 @@ $main-font-color: #555;
 		display: inline-block;
 		margin: 6px auto;
 	}
-	input[type='text'],
-	input[type='password'] {
-		max-width: 100%;
+	input,
+	textarea {
+		max-width: 92%;
 	}
 	[class*='-btn'] {
 		display: inline-block;
 		margin: 2px auto;
+	}
+	.text-sep-sm {
+		border-color: #999;
 	}
 }
 
@@ -95,4 +99,11 @@ $main-font-color: #555;
  * =========================================================================
  */
 
+/* -------------------------------------------------------------------------
+ * 註冊會員｜Signup
+ * -------------------------------------------------------------------------
+ */
 
+#personal-info-protect-act {
+	width: 92%;
+}
