finish member related pages in user_function/

--- a/view/user_function/member_change_password.html
+++ b/view/user_function/member_change_password.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="resource/img/misc/favicon.png">
-	<title>註冊｜三三吾鄉手工皂Trisoap</title>
-	<meta name="author" content="2017 Trisoap Team">
-	<meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='resource/css/sign.css' rel='stylesheet' type='text/css'>
-	<link href='resource/css/single.css' rel='stylesheet' type='text/css'>
-	<script src="resource/functions.js"></script>
-</head>
-
-<body>
-<br>
-	<div class="sign-block" style="width: 350px;">
-		<h1>修改密碼</h1>
-		舊密碼<br><input type="password" id="ori_password"><br>
-		<p>密碼限定使用英數字，長度上限為15字元</p>
-		新密碼<br><input type="password" id="new_password1"><br>
-		再一次輸入新密碼<br><input type="password" id="new_password2"><br>
-		<button class="promise" onclick="memberChangePassword()">確定</button>
-		<a href="index.php"><button class="cancel">取消</button></a>
-	</div>
-</body>
+<html lang="zh-Hant-TW">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>修改密碼｜三三吾鄉手工皂Trisoap</title>
+        <meta name="author" content="2017 Trisoap Team">
+        <meta property="og:title" content="修改密碼｜三三吾鄉手工皂 Trisoap" >
+        <meta property="og:url" content="https://www.trisoap.com.tw">
+        <meta property="og:image" content="resource/img/index/index01.jpg">
+        <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/dist/css/user_function.css">
+    </head>
+    <body>
+        <div class="sign-wrap">
+            <div class="sign text-center">
+                <h2>修改密碼</h2>
+                <div class="sign-block">
+                    <label for="ori_password">請輸入舊密碼</label>
+                    <br>
+                    <input type="password" id="ori_password">
+                </div>
+                <div class="sign-block">
+                	<p>密碼限定使用英數字，長度上限為15字元</p>
+                    <label for="new_password1">請輸入新密碼</label>
+                    <br>
+                    <input type="password" id="new_password1">
+                </div>
+                <div class="sign-block">
+                    <label for="new_password2">請再輸入新密碼</label>
+                    <br>
+                    <input type="password" id="new_password2">
+                </div>
+                <div class="sign-block">
+                    <a class="promise-btn" href="javascript:void(0)" onclick="memberChangePassword()">確定</a>
+                    <a class="neural-btn" href="index.php">取消</a>
+                </div>
+            </div>
+        </div>
+        <script src="resource/dist/js/view/user_function.js"></script>
+    </body>
 </html>
