--- a/view/user_function/member_signup.html
+++ b/view/user_function/member_signup.html
@@ -48,16 +48,16 @@
                     <input type="phone" id="phone">
                 </div>
                 <div class="sign-block">
-                    <label for="add">聯絡地址</label>
+                    <label for="address">聯絡地址</label>
                     <br>
-                    <input type="text" id="add">
+                    <input type="text" id="address">
                 </div>
                 <div class="sign-block">
                     <label for="taxid">統一編號（選填）</label>
                     <br>
                     <input type="text" id="taxid">
                 </div>
-                <div class="sign-block q-select">
+                <div class="sign-block">
                     <label for="skintype">您的膚質</label>
                     <select id="skintype">
                         <option selected disabled>請選擇...</option>
@@ -67,7 +67,7 @@
                         <option value="D">混和性</option>
                     </select>
                 </div>
-                <div class="sign-block q-select">
+                <div class="sign-block">
                     <label for="knowtype">如何認識三三</label>
                     <select id="knowtype">
                         <option selected disabled>請選擇...</option>
