--- a/view/user_function/member_edit.html
+++ b/view/user_function/member_edit.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="resource/img/misc/favicon.png">
-	<title>修改資料｜三三吾鄉手工皂Trisoap</title>
-	<meta name="author" content="2017 Trisoap Team">
-	<meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='resource/css/sign.css' rel='stylesheet' type='text/css'>
-	<script src="resource/functions.js"></script>
-</head>
-
-<body>
-<br>
-	<div class="sign-block">
-		<h1>修改資料</h1>
-		電子信箱：[member_email]<br>
-		您的姓名：<input type="text" id="name" value="[member_name]"><br>
-		通訊地址：<input type="text" id="address" value="[member_address]"><br>
-		聯絡電話：<input type="text" id="phone" value="[member_phone]"><br>
-		統一編號：<input type="text" id="taxid" value="[member_taxid]"><br>
-		<div class="styled-select">您的膚質：
-			<select id="skintype">
-			  	<option value="A">乾性</option>
-			  	<option value="B">中性</option>
-			  	<option value="C">油性</option>
-			  	<option value="D">混和性</option>
-			</select>
-		</div>
-		<br>
-		特殊要求：<textarea id="notice" cols="45" rows="5" value="[member_notice]"></textarea><br>
-		<button class="promise" onclick="memberEdit()">確定</button>
-		<a href="index.php"><button class="cancel">取消</button></a>
-	</div>
-</body>
+<html lang="zh-Hant-TW">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>會員資料修改｜三三吾鄉手工皂Trisoap</title>
+        <meta name="author" content="2017 Trisoap Team">
+        <meta property="og:title" content="會員資料修改｜三三吾鄉手工皂 Trisoap" >
+        <meta property="og:url" content="https://www.trisoap.com.tw">
+        <meta property="og:image" content="resource/img/index/index01.jpg">
+        <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/dist/css/user_function.css">
+    </head>
+    <body>
+        <div class="sign-wrap">
+            <div class="sign text-center">
+                <h2>會員資料修改</h2>
+                <div class="sign-block">
+                    <p>電子信箱：[member_email]</p>
+                </div>
+                <div class="sign-block">
+                    <label for="name">您的姓名</label>
+                    <br>
+                    <input type="text" id="name" value="[member_name]">
+                </div>
+                <div class="sign-block">
+                    <label for="phone">聯絡電話</label>
+                    <br>
+                    <input type="phone" id="phone" value="[member_phone]">
+                </div>
+                <div class="sign-block">
+                    <label for="add">聯絡地址</label>
+                    <br>
+                    <input type="text" id="address" value="[member_address]">
+                </div>
+				<div class="sign-block">
+                    <label for="taxid">統一編號（選填）</label>
+                    <br>
+                    <input type="text" id="taxid" value="[member_taxid]">
+                </div>
+                <div class="sign-block">
+                    <label for="skintype">您的膚質</label>
+                    <select id="skintype">
+                        <option selected disabled>請選擇...</option>
+                        <option value="A">乾性</option>
+                        <option value="B">中性</option>
+                        <option value="C">油性</option>
+                        <option value="D">混和性</option>
+                    </select>
+                </div>
+                <div class="sign-block">
+                    <label for="notice">備註（選填）</label>
+                    <br>
+                    <textarea id="notice" value="[member_notice]"></textarea>
+                </div>
+                <div class="sign-block">
+                    <a class="promise-btn" href="javascript:void(0)" onclick="memberEdit()">確定</a>
+                    <a class="neural-btn" href="index.php">取消</a>
+                </div>
+            </div>
+        </div>
+        <script src="resource/dist/js/view/user_function.js"></script>
+    </body>
 </html>
