--- a/view/user_function/member_reset_password.html
+++ b/view/user_function/member_reset_password.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="resource/img/misc/favicon.png">
-    <title>忘記密碼｜三三吾鄉手工皂Trisoap</title>
-    <meta name="author" content="2017 Trisoap Team">
-    <meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href='resource/css/sign.css' rel='stylesheet' type='text/css'>
-    <link href='resource/css/single.css' rel='stylesheet' type='text/css'>
-    <script src="resource/functions.js"></script>
-</head>
-
-<body>
-<br>
-<div class="sign-block" style="width: 350px;">
-    <h1>忘記密碼</h1>
-	請輸入您的電子信箱<br><input type="text" id="account"><br>
-	<button class="promise" onclick="memberResetPassword()">確定</button>
-	<a href="index.php"><button type="button" class="cancel">取消</button></a>
-</div>
-</body>
+<html lang="zh-Hant-TW">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>忘記密碼｜三三吾鄉手工皂Trisoap</title>
+        <meta name="author" content="2017 Trisoap Team">
+        <meta property="og:title" content="忘記密碼｜三三吾鄉手工皂 Trisoap" >
+        <meta property="og:url" content="https://www.trisoap.com.tw">
+        <meta property="og:image" content="resource/img/index/index01.jpg">
+        <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/dist/css/user_function.css">
+    </head>
+    <body>
+        <div class="sign-wrap">
+            <div class="sign text-center">
+                <h2>忘記密碼</h2>
+                <div class="sign-block">
+                    <label for="account">請輸入您的電子信箱</label>
+                    <br>
+                    <input type="email" id="account">
+                </div>
+                <div class="sign-block">
+                    <a class="promise-btn" href="javascript:void(0)" onclick="memberResetPassword()">確定</a>
+                    <a class="neural-btn" href="index.php">取消</a>
+                </div>
+            </div>
+        </div>
+        <script src="resource/dist/js/view/user_function.js"></script>
+    </body>
 </html>
