finish cart page

--- a/view/user_function/cart_content.html
+++ b/view/user_function/cart_content.html
@@ -1,18 +1,19 @@
-<h2>購物車的商品</h2>
-<table>
-    <thead>
-        <tr>
-            <td>商品名稱</td>
-            <td>單價(NTD)</td>
-            <td>數量</td>
-            <td>金額(NTD)</td>
-            <td>操作</td>
-        </tr>
-    </thead>
-    <tbody>
-        [cartOperate]
-    </tbody>
-</table>
-<p>目前全館滿777即可享臺灣本島免運費！</p>
-<a href="index.php?route=pay&order=cart"><button type="button" class="promise">確定結帳</button></a>
-<a href="index.php"><button type="button" class="cancel">返回首頁</button></a>
+                    <div class="sign-block">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>商品名稱</td>
+                                    <td>單價(NTD)</td>
+                                    <td>數量</td>
+                                    <td>金額(NTD)</td>
+                                    <td>選項</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                [cartOperate]
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="sign-block">
+                        <a class="promise-btn" href="index.php?route=pay&order=cart">確定結帳</a>
+                    </div>
