--- a/view/user_function/cart_empty.html
+++ b/view/user_function/cart_empty.html
@@ -1,3 +1,3 @@
-<h2>購物車內沒有任何商品</h2>
-<a href="index.php"><button type="button" class="promise">返回首頁</button></a>
-<a href="index.php?route=product"><button type="button" class="promise">返回商品頁</button></a>
+					<div class="sign-block">
+						<p>購物車內沒有任何商品</p>
+					</div>
