fix add-to-cart behavior error

--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -17,7 +17,7 @@
 						<h2 id="single-product-price">{price}</h2>
 						<label for="purchase-amount">數量：</label>
 						<input type="number" id="purchase-amount" class="form-field" name="ORDAMT" value="1" min="1">
-						<a class="submit-btn" href="javascript:void(0)" onclick="orderitemCreate()">加入購物車</a>
+						<a class="submit-btn" href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">加入購物車</a>
 					</div>
 				</div>
 			</div>
