--- a/view/user_function/order_cus_view.html
+++ b/view/user_function/order_cus_view.html
@@ -1,94 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="resource/img/misc/favicon.png">
-    <title>查看訂單｜三三吾鄉手工皂Trisoap</title>
-    <meta name="author" content="2017 Trisoap Team">
-    <meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
-    <link href="resource/css/bootstrap.min.css" rel="stylesheet">
-    <link href="resource/css/style.css" rel="stylesheet">
-    <script src="resource/functions.js"></script>
-</head>
-<body id="page-top">
-    <nav class="navbar navbar-fixed-top nav-custom">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" data-toggle="collapse" data-target=".navbar-main-collapse" class="navbar-toggle">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#page-top" class="navbar-brand"><img src="resource/image/logo.png" alt="" class="logo"></a>
-            </div>
-            <div class="collapse navbar-collapse navbar-main-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="index.php">
-                            回三三首頁<i class="fa fa-angle-down" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index.php?route=order&in=cusView">
-                            查看訂單<i class="fa fa-angle-down" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            [member_name]，您好<br>
-                        </a>
-                    </li>
-                    <li>
-                        <a onclick="memberLogout()">
-                            登出<i class="fa fa-angle-down" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section>
-        <div class="container">
-            <h2>訂單紀錄</h2>
-            <div class="manage">
-                <div class="row table-responsive">
-                    <div class="tab-content">
-                        <div id="all" class="tab-pane fade in active">
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <td>訂單編號</td>
-                                        <td>發票編號</td>
-                                        <td>缺貨狀態</td>
-                                        <td>訂單狀態</td>
-                                        <td>付款狀態</td>
-                                        <td>付款方式</td>
-                                        <td>訂單總額</td>
-                                        <td>運費</td>
-                                        <td>實收金額</td>
-                                        <td>建立日期</td>
-                                        <td>操作</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                [cusOrderOperate]
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>查看訂單｜三三吾鄉手工皂Trisoap</title>
+        <meta name="author" content="2017 Trisoap Team">
+        <meta property="og:title" content="查看訂單｜三三吾鄉手工皂 Trisoap" >
+        <meta property="og:url" content="https://www.trisoap.com.tw">
+        <meta property="og:image" content="resource/img/index/index01.jpg">
+        <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/dist/css/user_function.css">
+    </head>
+    <body>
+        <div class="sign-wrap">
+            <div class="sign text-center">
+                <h2>查看訂單</h2>
+                <div class="sign-block">
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>訂單編號</td>
+                                <td>發票編號</td>
+                                <td>缺貨狀態</td>
+                                <td>訂單狀態</td>
+                                <td>付款狀態</td>
+                                <td>付款方式</td>
+                                <td>訂單總額</td>
+                                <td>運費</td>
+                                <td>實收金額</td>
+                                <td>建立日期</td>
+                                <td>操作</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        [cusOrderOperate]
+                        </tbody>
+                    </table>
+                </div>
+                <div class="sign-block">
+                    <p>目前全館滿777即可享臺灣本島免運費！</p>
+                    <a class="promise-btn" href="index.php?route=soap">前往單品</a>
+                    <a class="promise-btn" href="index.php?route=soapstring">旅用皂絲</a>
+                    <a class="neural-btn" href="index.php">返回首頁</a>
                 </div>
             </div>
         </div>
-    </section>
-</body>
-<!-- jquery -->
-<script src="resource/js/jquery-1.12.3.min.js"></script>
-<!-- bootstrap js -->
-<script src="resource/js/bootstrap.min.js"></script>
-<!-- custom js -->
-<script src="resource/js/trisoap.js"></script>
+        <script src="resource/dist/js/view/user_function.js"></script>
+    </body>
 </html>
