--- a/view/user_function/discount_change.html
+++ b/view/user_function/discount_change.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="resource/img/misc/favicon.png">
-    <title>更換折價卷｜三三吾鄉手工皂Trisoap</title>
-    <meta name="author" content="2017 Trisoap Team">
-    <meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href='resource/css/sign.css' rel='stylesheet' type='text/css'>
-    <link href='resource/css/single.css' rel='stylesheet' type='text/css'>
-    <script src="resource/functions.js"></script>
-</head>
-
-<body>
-    <div class="sign-block" style="width: 350px;">
-        <h1>更換折價卷</h1>
-        請輸入兌換碼：<input type="text" id="index">
-        <button class="promise" onclick="discountApply()">確定</button>
-    </div>
-</body>
+<html lang="zh-Hant-TW">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>更換折價券｜三三吾鄉手工皂Trisoap</title>
+        <meta name="author" content="2017 Trisoap Team">
+        <meta property="og:title" content="更換折價券｜三三吾鄉手工皂 Trisoap" >
+        <meta property="og:url" content="https://www.trisoap.com.tw">
+        <meta property="og:image" content="resource/img/index/index01.jpg">
+        <link rel="shortcut icon" href="resource/img/misc/favicon.png">
+        <link rel="stylesheet" href="resource/dist/css/user_function.css">
+    </head>
+    <body>
+        <div class="sign-wrap">
+            <div class="sign text-center">
+                <h2>更換折價券</h2>
+                <div class="sign-block">
+                    <label for="index">請輸入兌換碼</label>
+                    <br>
+                    <input type="text" id="index">
+                </div>
+                <div class="sign-block">
+                    <a class="promise-btn" href="javascript:void(0)" onclick="discountApply()">確定</a>
+                    <a class="neural-btn" href="index.php">返回首頁</a>
+                </div>
+            </div>
+        </div>
+        <script src="resource/dist/js/view/user_function.js"></script>
+    </body>
 </html>
