--- a/view/user_function/pay_empty.html
+++ b/view/user_function/pay_empty.html
@@ -1,2 +1,4 @@
-<h2>請先至商品頁面選購</h2>
-<a href="index.php?route=product"><button type="button" class="promise">確定</button></a>
+				<div class="sign-block">
+					<h3>訂單還沒有任何內容！</h3>
+					<p>請先至商品頁面選購</p>
+				</div>
