--- a/view/user_function/cart.html
+++ b/view/user_function/cart.html
@@ -17,6 +17,7 @@
             <div class="sign text-center">
                 <h2>您的購物車</h2>
                 [cartContent]
+                <hr class="text-sep-sm">
                 <div class="sign-block">
                     <p>目前全館滿777即可享臺灣本島免運費！</p>
                     <a class="promise-btn" href="index.php?route=soap">前往單品</a>
