--- a/resource/css/user_function.scss
+++ b/resource/css/user_function.scss
@@ -55,6 +55,10 @@ $main-font-color: #555;
 	border-radius: 16px;
 	box-sizing: border-box;
 	background-color: rgba(255, 255, 255, 0.63);
+	overflow: auto;
+	table {
+		line-height: 1.5;
+	}
 	label {
 		display: inline-block;
 		margin: 6px auto;
